syntax = "proto3";
package rollapp.sequencers.types;

option go_package = "github.com/dymensionxyz/dymension-rdk/x/sequencers/types";

message EventUpdateRewardAddress {
  // Operator is the bech32-encoded address of the actor sending the update
  string operator = 1;
  // RewardAddr is a bech32 encoded sdk acc address
  string reward_addr = 2;
}

message EventUpdateWhitelistedRelayers {
  // Operator is the bech32-encoded address of the actor sending the update
  string operator = 1;
  // Relayers is an array of the whitelisted relayer addresses. Addresses are bech32-encoded strings.
  repeated string relayers = 2;
}

message EventUpsertSequencer {
  // Operator is the bech32-encoded address of the actor sending the update
  string operator = 1;
  // ConsAddr is a tendermint consensus address
  string cons_addr = 2;
  // RewardAddr is the bech32-encoded sequencer's reward address
  string reward_addr = 3;
  // Relayers is an array of the whitelisted relayer addresses. Addresses are bech32-encoded strings.
  repeated string relayers = 4;
}